Autores do projeto

--- a/.obsidian/.gitignore
+++ b/.obsidian/.gitignore
@@ -1,5 +1,5 @@
 # ============================================================
-# @howstrangeoficial
+# @alansilvacode
 # Arqivo para ignorar pastas e arquivos dentro do projeto
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # ============================================================
